--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
   --light-white: #fff6eb;
   --light-gray: #ccc;
   --white: #fff;
-  --orange: #ffaa42;
   --border: .1rem solid rgba(255,255,255,.3);
 }
 
@@ -23,11 +22,12 @@
 }
 
 html{
-  font-size:62.5%;
+  font-size: 62.5%;
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
+/*barra de rolagem*/
 html::-webkit-scrollbar{
   width: .8rem;
 }
@@ -44,6 +44,7 @@ section{
   padding: 2rem 7%;
 }
 
+/*header*/
 .btn{
   display: inline-block;
   margin-top: 1rem;
@@ -100,7 +101,7 @@ section{
   z-index: 1000;
 }
 
-.header .logoPadaria {
+.header .logoPadaria{
   margin-right: auto;
   font-size: 2.5rem;
   text-transform: capitalize;
@@ -108,37 +109,12 @@ section{
   font-weight: 800;
   display: inline-flex;
   align-items: center;
-  animation: logoAnimation 4s ease-in-out forwards; /* Animação acontece uma vez */
+  animation: logoAnimation 4s ease-in-out forwards; /*animação acontece uma vez */
 }
 
 .header .logoPadaria i{
   margin-right: 1.2rem;
 }
-
-/* Definição da animação */
-@keyframes logoAnimation {
-  0% {
-    letter-spacing: 0.5rem; /* Espaço inicial entre o texto e a logo */
-    transform: scale(1); /* Tamanho inicial */
-  }
-  25% {
-    letter-spacing: 0; /* Nome se aproxima da logo */
-    transform: scale(1.1); /* Ligeiro aumento no tamanho */
-  }
-  50% {
-    letter-spacing: 0; /* Nome completamente junto da logo */
-    transform: scale(1.1); /* Continua maior */
-  }
-  75% {
-    letter-spacing: 0.5rem; /* Nome se afastando da logo */
-    transform: scale(1); /* Retorna ao tamanho original */
-  }
-  100% {
-    letter-spacing: 0.1rem; /* Espaço final entre o texto e a logo */
-    transform: scale(1); /* Retorna ao tamanho original */
-  }
-}
-
 
 .header .navbar{
   position: relative;
@@ -154,7 +130,6 @@ section{
   display:none;
 }
 
-/* linked list */
 .header .navbar a{
   margin-right: 2rem;
   font-size: 2rem;
@@ -180,43 +155,10 @@ section{
 .header #menu-btn{
   display: none;
 }
-/* end */
 
-/* home */
-.home {
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center; /* Garantir que o conteúdo fique centralizado */
-  background-size: cover; /* Ocupa toda a tela */
-  background-position: center; /* Centraliza a imagem de fundo */
-}
-
-.animation-container {
-  background: #720000;
-  width: 100%; /* A largura da animação ocupa 100% da tela */
-  height: 100vh; /* A altura da animação ocupa 100% da tela */
-  margin: 0 auto;
-  overflow: hidden;
-  position: relative;
-}
-
-.home .content{
-  min-width: 60rem;
-}
-
-.home .content h3{
-  font-size: 6rem;
-  text-transform: uppercase;
-  color: var(--white);
-  margin-bottom: 2rem;
-}
-
-/* about */
+/*about*/
 .about{
-  /*padding-top: 5rem; */
   padding-bottom: 5rem;
-  /*background-image: url("https://images.pexels.com/photos/1694980/pexels-photo-1694980.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");*/
   background-repeat: repeat-y;
   background-position: center top;
 }
@@ -231,12 +173,12 @@ section{
   flex: 1 1 65rem;
 }
 
-.about .row .image img {
+.about .row .image img{
   width: 80%;
   animation: flutuar 4s ease-in-out infinite;
 }
 
-@keyframes flutuar {
+@keyframes flutuar{ /*movimento da animação*/
   0% {
     transform: translateY(0); 
   }
@@ -248,10 +190,8 @@ section{
   }
 }
 
-
 .about .row .content{
   flex: 1 1 35rem;
-  /*padding: 8rem; */
 }
 
 .about .row .content h3{
@@ -267,26 +207,26 @@ section{
   text-align: justify;
 }
 
-/* menu */
+/*produções*/
 .menu .box-container{
   display: grid;
   grid-template-columns: repeat(auto-fit,minmax(30rem,1fr));
   gap:1.5rem;
 }
 
-.menu .box-container .box {
+.menu .box-container .box{
   padding: 5rem;
   text-align: center;
   background: #597841;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   border-radius: 1.5rem;
-  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transição suave */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .menu .box-container .box:hover {
   background-color: #cfb26e;
-  transform: translateY(-10px); /* Move o card 10px para cima */
-  box-shadow: 0 0.8rem 1.5rem rgba(0, 0, 0, 0.2); /* Aumenta a sombra */
+  transform: translateY(-10px); /*move o card 10px para cima*/
+  box-shadow: 0 0.8rem 1.5rem rgba(0, 0, 0, 0.2); /*aumenta a sombra*/
 }
 
 
@@ -301,19 +241,11 @@ section{
   color: var(--white);
 }
 
-.menu .box-container .box .price{
-  padding: 0.5rem 0;
-  font-size: 2.5rem;
-  color: var(--white);
-}
-
 .menu .box-container .box:hover > *{
   color: var(--black);
 }
 
-/* end */
-
-/* contact us */
+/*contato*/
 .contact .row{
   display: -webkit-box;
   display: -ms-flexbox;
@@ -333,24 +265,10 @@ section{
              margin-right: 0.9cm;
 }
 
-.contact .row .image img {
+.contact .row .image img{
   width: 100%;
-  animation: moveUpDown 4s ease-in-out infinite;
   border-radius: 1.5rem;
 }
-
-@keyframes moveUpDown {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-10px); /* Subir 10px */
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-
 
 .contact .row form{
    -webkit-box-flex: 1;
@@ -387,13 +305,12 @@ section{
   width: 100%;
   padding: 2rem;
   font-size: 1.7rem;
-  color: var(--white);
+  color: var(--black);
   text-transform: none;
   background: none;
 }
-/* end */
 
-/* Footer */
+/*footer*/
 .footer{
   background: #597841;
 }
@@ -433,7 +350,7 @@ section{
 }
 
 .footer .box-container .box .link:hover{
-  color: var(--orange);
+  color: var(--light-white);
   text-decoration: underline;
 }
 
@@ -447,39 +364,23 @@ section{
   border-top: 0.1rem solid var(--primary-color);
 }
 
-.footer .credit i{
-  color: var(--orange);
-}
-
-.footer .credit span{
-  color: var(--primary-color);
-}
-
-/* end */
-
-/* media queries */
-
+/*media queries*/
 @media (max-width:991px){
-  
   html{
     font-size: 55%;
   }
-  
   .header{
     padding: 2rem 5%;
   }
-  
   section{
     padding: 2rem;
   }
 }
 
 @media (max-width:768px){
-  
   .header #menu-btn{
     display: inline-block;
   }
-  
   .header .navbar{
     position: fixed;
     top: 0;
@@ -499,16 +400,13 @@ section{
              justify-content: center;
     z-index: 1200;
   }
-  
   .header .navbar #close-navbar{
     display: block;
   }
-  
   .header .navbar.active{
-    box-shadow: 0 0 0 100vw rgba(0,0,0,0.8); /* rtl */
-    right: 0; /* rtl */
+    box-shadow: 0 0 0 100vw rgba(0,0,0,0.8);
+    right: 0;
   }
-  
   .header .navbar a{
     color: var(--black);
     display: block;
@@ -516,27 +414,22 @@ section{
     text-align: center;
     font-size: 3rem;
   }
-  
-/*   home */
   .home{
-    background-postion: left; /* rtl */
+    background-postion: left;
     justify-content: center;
     align-items: center;
     text-align: center;
   }
-  
   .home .content h3{
     font-size: 4rem;
   }
 }
 
 @media (max-width:450px){
-  
   html{
     font-size: 50%;
   }
 }
-
 .animation-container {
   background: #ffffff;
   height: 454px;
@@ -545,12 +438,6 @@ section{
   position: relative;
   width: 806px;
 }
-
 span {
   display: block;
 }
-
-
-
-
-/*# sourceMappingURL=style.css.map */
